# BinanceFutureBot

./: .env.example  .env.remote_example  .gitignore  .replit  .streamlitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  app.py  background_scheduler.py  binance_client.py  constants.py  database.py  database_utils.py  database_yedek_sunucuya.sql  deploy.sh  docker-compose.yml  fix_database.py  fix_permissions.py  git_pull.bat  git_pull_differences.bat  git_pull_differences.sh  git_push.bat  init.sql  okx_client.py  pyproject.toml  replit.md  requirements.txt  run_local.bat  run_local.sh  services.py  setup_local.py  setup_windows.bat  sync_okx_history.py  trading_strategy.py  utils.py
.kiro/hooks/: figma-code-connect.kiro.hook
.kiro/steering/: design-system.md
.streamlit/: config.toml  style.css
attached_assets/: Pasted--Kurtarma-zelli-i-otomatik-aktifle-tirildi-Monitor-ba-l_1767164833803.txt  Pasted--OKX-pos-instId-ETH-USDT-SWAP-posSide-short-pos-3-73-up_1767166312028.txt
ui/: dashboard.py  database_view.py  history.py  orders.py  settings.py  trade.py
